# ardu_ws

./: .gitignore  imgui.ini
src/ardupilot_gz/ardupilot_gz_bringup/launch/: iris_warehouse.launch.py
src/ardupilot_gz/ardupilot_gz_description/models/lidar_3d/: model.sdf
src/ardupilot_gz/ardupilot_gz_gazebo/worlds/: warehouse.sdf
src/ardupilot_ros/ardupilot_cartographer/: setup.py
src/kiss-icp/cpp/kiss_icp/pipeline/: KissICP.cpp
src/kiss-icp/ros/launch/: odometry.launch.py
src/kiss-icp/ros/rviz/: kiss_icp.rviz
src/kiss-icp/ros/src/: OdometryServer.hpp
src/lidar_map_localizer/: CMakeLists.txt  README.md
src/lidar_map_localizer/config/: kiss_icp.yaml  kiss_slam.yaml
src/lidar_map_localizer/launch/: ndt_gicp_localization_launch.py  small_gicp_localization_launch.py  submap_kiss_icp_ndt_launch.py  submap_kiss_icp_small_gicp_launch.py
src/lidar_map_localizer/sample_maps/: iris_warehouse_map.pcd  maze_32bit.pcd  my_map.pcd  warehouse_map.pcd  warehouse_mission_plane.txt
src/lidar_map_localizer/scripts/: analyze_odom.py  ground_plane.py  pcd64_conversion.py  teleop_control_node.py  translate_map.py
src/lidar_map_localizer/src/: ndt_gicp_localization.cpp  submap_kiss_icp_ndt.cpp  submap_kiss_icp_small_gicp.cpp
src/nav3d_planner/: CMakeLists.txt  package.xml
src/nav3d_planner/config/: kiss_icp_pipeline_config.yml  kiss_slam_pipeline_config.yml  nav3d_params.yaml
src/nav3d_planner/launch/: localization.launch.py  nav3d.launch.py
src/nav3d_planner/rviz/: nav3d_config.rviz
src/nav3d_planner/scripts/: ardupilot_interface.py  goal_publisher.py  mission_planner.py  odom_to_pose_node.py  odom_to_tf_node.py  planner_3d_node.py  pointcloud_fixer.py
